--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,14 +1,20 @@
 ul {
-  display:flex;
+  display: flex;
   justify-content: center;
   position: absolute;
   bottom: 0;
   list-style: none;
   background-color: white;
-  height: 30px;
+  height: 1px;
   width: 100%;
 }
 
 li {
   margin: 3px;
+}
+
+@media screen and (max-width: 700px) {
+  footer {
+    display: none;
+  }
 }
