--- a/src/components/Items/Items.module.css
+++ b/src/components/Items/Items.module.css
@@ -1,7 +1,15 @@
 .List {
-  padding-top: 60px;
   display: block;
-  height: 80vh;
+  height: 84vh;
+  width: 100vw;
+  margin: 0;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+@media screen and (max-width: 699px) {
+  .List {
+    height: 100vh;
+  }
 }
