--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -12,15 +12,16 @@ div.Title {
   display: flex;
   flex-direction: column;
   color: white;
-  margin: 4px;
+  margin: 1px 1px 1px 10px;
 }
 
 .Search,
 .Hacker {
   margin: 0;
+  font-size: 17px;
 }
 
-@media screen and (max-width: 540px) {
+@media (max-width: 600px) {
   .Search,
   .Hacker {
     display: none;
