--- a/src/components/Sortbar/Sortbar.module.css
+++ b/src/components/Sortbar/Sortbar.module.css
@@ -1,10 +1,18 @@
 .Sortbar {
-  padding: 70px 0px 10px 10px;
+  padding: 60px 0px 0px 10px;
   border-bottom: 1px solid #eee;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .Search {
+  display: flex;
+  justify-content: space-between;
   font-size: 90%;
+  padding-top: 10px;
 }
 
 select {
@@ -15,4 +23,9 @@ select {
   outline-style: none;
   font-size: 15px;
   color: grey;
+}
+
+.Results {
+  padding-top: -30px;
+  padding-right: 50px;
 }
