--- a/src/components/Items/Items.module.css
+++ b/src/components/Items/Items.module.css
@@ -3,6 +3,7 @@
   height: 84vh;
   width: 100%;
   padding-top: 110px;
+  padding-right: 40px;
   margin: 0;
   overflow-x: hidden;
   scroll-behavior: smooth;
