--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -1,4 +1,4 @@
-.List {
+.Comments {
   display: block;
   height: 84vh;
   width: 100%;
@@ -7,4 +7,10 @@
   margin: 0;
   overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+@media screen and (max-width: 699px) {
+  .Comments {
+    height: 100vh;
+  }
 }
